--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -51,7 +51,6 @@
       align-items: center;
       margin-left: 910px;
       gap: 2rem;
-      /* Adjusted gap */
       flex-grow: 1;
     }
 
@@ -120,32 +119,20 @@
 
     .save-button {
       padding: 10px 20px;
-      /* Add padding for better spacing */
       font-size: 16px;
-      /* Adjust font size */
       font-weight: bold;
-      /* Make the text bold */
       color: #fff;
-      /* Text color */
       background-color: #4CAF50;
-      /* Green background color */
       border: none;
-      /* Remove default button border */
       border-radius: 5px;
-      /* Add rounded corners */
       cursor: pointer;
-      /* Show pointer cursor on hover */
       transition: background-color 0.3s ease;
-      /* Smooth transition for background color */
       display: block;
-      /* Make it block element */
       margin: 0 auto;
-      /* Align center using margin auto */
     }
 
     .save-button:hover {
       background-color: #45a049;
-      /* Darker green on hover */
     }
 
     .footer {
@@ -171,7 +158,7 @@
         <a href="/home" class="nav-link"><i class="fas fa-home"></i> Home</a>
         <a href="/home/my_account" class="nav-link"><i class="fas fa-user-circle"></i> View Account</a>
         <a href="/home/edit_account" class="nav-link"><i class="fas fa-edit"></i> Edit Account</a>
-        <a href="/view_orders" class="nav-link"><i class="fas fa-box"></i> View Orders</a>
+        <a href="/home/view_orders" class="nav-link"><i class="fas fa-box"></i> View Orders</a>
         <a href="#" class="nav-link" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
       </nav>
     </header>
