--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -85,32 +85,31 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 2rem;
-            padding-top: 100px;
-            /* Add padding to prevent content from hiding under the fixed header */
+            padding: 3rem;
+            padding-top: 150px;
             flex: 1;
         }
 
         .book-container {
             display: flex;
             background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 30px;
             position: relative;
             align-items: flex-start;
         }
 
         .book-image {
             flex: 1;
-            max-width: 300px;
-            margin-right: 20px;
+            max-width: 400px;
+            margin-right: 40px;
         }
 
         .book-image img {
             width: 100%;
             height: auto;
-            border-radius: 5px;
+            border-radius: 8px;
         }
 
         .book-details {
@@ -120,12 +119,13 @@
         }
 
         h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
         }
 
         p {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
+            font-size: 1.4rem;
         }
 
         .dropdown {
@@ -162,24 +162,24 @@
 
         .add-to-cart {
             position: absolute;
-            bottom: 20px;
-            right: 20px;
+            bottom: 30px;
+            right: 30px;
             background-color: #838586;
             color: white;
-            padding: 10px 20px;
+            padding: 15px 30px;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 1.6rem;
             transition: background-color 0.3s, transform 0.3s;
             display: flex;
             align-items: center;
         }
 
         .add-to-cart img {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
+            width: 30px;
+            height: 30px;
+            margin-right: 15px;
         }
 
         .add-to-cart:hover {
@@ -234,8 +234,8 @@
                 <p><strong>Feature:</strong> {{ book.feature }}</p>
             </div>
             <button
-            onclick="addToCart('{{book.id}}', '{{book.name}}', '{{book.price}}', '{{book.image_url}}', '{{book.author}}', '{{book.feature}}')" 
-            class="add-to-cart-btn"><i class="fas fa-plus"></i></button>
+                onclick="addToCart('{{ book.bookId }}', '{{ book.name }}', '{{ book.price }}', '{{ book.image_url }}', '{{ book.author }}', '{{ book.feature }}')"
+                class="add-to-cart-btn"><i class="fas fa-plus"></i></button>
         </div>
     </div>
     <footer class="footer">
@@ -272,20 +272,26 @@
                 })
                 .catch(error => {
                     console.error('Error:', error);
+                    alert('Failed to add item to cart. Please try again later.');
                 });
         }
+
+
         function confirmLogout() {
             if (confirm('Online Bookstore isn\'t the same without you. Are you sure you want to logout?')) {
                 window.location.href = "/";
             }
         }
+
         function toggleDropdown(event) {
             event.stopPropagation();
             var dropdown = event.target.nextElementSibling;
             var isOpen = dropdown.style.display === 'block';
             closeAllDropdowns();
             dropdown.style.display = isOpen ? 'none' : 'block';
-        }// Close all dropdowns
+        }
+
+        // Close all dropdowns
         function closeAllDropdowns() {
             var dropdowns = document.querySelectorAll('.dropdown-content');
             dropdowns.forEach(function (dropdown) {
