"Updated routes and templates for cart functionality, including view cart, change quantity, and remove from cart features."

--- a/templates/index.html
+++ b/templates/index.html
@@ -243,7 +243,7 @@
             <a href="#" onclick="filterBooks('hard cover')"><i class="fas fa-book"></i> Hard Copy</a>
           </div>
         </div>
-        <a href="/view_cart" class="nav-link"><i class="fas fa-shopping-cart"></i> View
+        <a href="/home/view_cart" class="nav-link"><i class="fas fa-shopping-cart"></i> View
           Cart</a>
         <div class="dropdown">
           <a href="#" class="nav-link" onclick="toggleDropdown(event)"><i class="fas fa-user"></i> My Account</a>
