--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -207,6 +207,8 @@
         </div>
         <nav class="nav">
             <a href="/home" class="nav-link"><i class="fas fa-home"></i> Home</a>
+            <a href="/home/view_cart" class="nav-link"><i class="fas fa-shopping-cart"></i> View
+                Cart</a>
             <div class="dropdown">
                 <a href="#" class="nav-link" onclick="toggleDropdown(event)"><i class="fas fa-user"></i> My
                     Account</i></a>
