--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -231,7 +231,7 @@
                 <p><strong>Author:</strong> {{ book.author }}</p>
                 <p><strong>Description:</strong> {{ book.description }}</p>
                 <p><strong>Genre:</strong> {{ book.genre }}</p>
-                <p><strong>Price:</strong> ${{ book.price }}</p>
+                <p><strong>Price:</strong> Rs.{{ book.price }}</p>
                 <p><strong>Quantity:</strong> {{ book.quantity }}</p>
                 <p><strong>Feature:</strong> {{ book.feature }}</p>
             </div>
